--- a/static/_TodoItem.scss
+++ b/static/_TodoItem.scss
@@ -11,6 +11,7 @@
         border-bottom: 1px solid rgb(240, 239, 239);
         padding: 20px 0;
         color: rgb(27, 119, 81);
+        animation: showup 0.5s;
         p{
             font-size: 3vmin;
             padding: 5px;
@@ -25,7 +26,6 @@
             border-left:1px solid rgb(240, 239, 239) ;
             cursor: pointer;
             position: relative;
-            // background: rgba(255, 255, 255, 0.379);
         }
         .delete-btn::after{
             content: "";
@@ -48,11 +48,27 @@
     }
 
 }
+@keyframes showup{
+    0%{
+        transform:translateY(-5px);
+    }
+    100%{
+        transform:translateY(0px);
+    }
+}
+
 @keyframes color{
     0%{
         background:rgba(240, 239, 239, 0)
     }
     100%{
         background:rgb(240, 239, 239)
+    }
+}
+
+@media screen and (max-width:1000px) {
+    .todo-container{
+        width: 70%;
+    
     }
 }
