--- a/static/app.css
+++ b/static/app.css
@@ -321,6 +321,40 @@ nav .inner-nav .menu-list {
   margin: 50px;
 }
 
+@media screen and (max-width: 1000px) {
+  .list-page-main .list-element-container {
+    width: 90%;
+  }
+  .list-page-main .list-element-container form {
+    width: 40%;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .list-page-main .list-element-container {
+    width: 90%;
+  }
+  .list-page-main .list-element-container form {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .list-page-main .list-element-container {
+    width: 90%;
+  }
+  .list-page-main .list-element-container form {
+    width: 80%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .list-page-main .list-element-container form button {
+    margin-top: 20px;
+  }
+}
+
 .todo-container {
   width: 50%;
   display: -webkit-box;
@@ -349,6 +383,8 @@ nav .inner-nav .menu-list {
   border-bottom: 1px solid #f0efef;
   padding: 20px 0;
   color: #1b7751;
+  -webkit-animation: showup 0.5s;
+          animation: showup 0.5s;
 }
 
 .todo-container .todo-item p {
@@ -389,6 +425,28 @@ nav .inner-nav .menu-list {
   color: white;
 }
 
+@-webkit-keyframes showup {
+  0% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@keyframes showup {
+  0% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
 @-webkit-keyframes color {
   0% {
     background: rgba(240, 239, 239, 0);
@@ -404,6 +462,12 @@ nav .inner-nav .menu-list {
   }
   100% {
     background: #f0efef;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .todo-container {
+    width: 70%;
   }
 }
 /*# sourceMappingURL=app.css.map */
